--- a/MaliciousYao/MaliciousYao.vcxproj
+++ b/MaliciousYao/MaliciousYao.vcxproj
@@ -157,11 +157,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\primitives\CheatingRecoveryCircuitCreator.cpp" />
+    <ClCompile Include="src\primitives\CircuitInput.cpp" />
     <ClCompile Include="src\primitives\CommunicationConfig.cpp" />
     <ClCompile Include="src\primitives\UnlockP1InputCircuitCreator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\primitives\CheatingRecoveryCircuitCreator.hpp" />
+    <ClInclude Include="include\primitives\CircuitInput.hpp" />
     <ClInclude Include="include\primitives\CommunicationConfig.hpp" />
     <ClInclude Include="include\primitives\CryptoPrimitives.hpp" />
     <ClInclude Include="include\primitives\UnlockP1InputCircuitCreator.hpp" />
