--- a/MaliciousYao/MaliciousYao.vcxproj
+++ b/MaliciousYao/MaliciousYao.vcxproj
@@ -156,12 +156,15 @@
     <Text Include="assets\conf\PartiesConfig.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\common\CommonMaliciousYao.cpp" />
     <ClCompile Include="src\primitives\CheatingRecoveryCircuitCreator.cpp" />
     <ClCompile Include="src\primitives\CircuitInput.cpp" />
     <ClCompile Include="src\primitives\CommunicationConfig.cpp" />
     <ClCompile Include="src\primitives\UnlockP1InputCircuitCreator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\common\CommonMaliciousYao.hpp" />
+    <ClInclude Include="include\common\Preconditions.hpp" />
     <ClInclude Include="include\primitives\CheatingRecoveryCircuitCreator.hpp" />
     <ClInclude Include="include\primitives\CircuitInput.hpp" />
     <ClInclude Include="include\primitives\CommunicationConfig.hpp" />
