--- a/MaliciousYao/MaliciousYao.vcxproj
+++ b/MaliciousYao/MaliciousYao.vcxproj
@@ -157,18 +157,23 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\common\CommonMaliciousYao.cpp" />
+    <ClCompile Include="src\OfflineOnline\specs\OfflineProtocolP1.cpp" />
     <ClCompile Include="src\primitives\CheatingRecoveryCircuitCreator.cpp" />
     <ClCompile Include="src\primitives\CircuitInput.cpp" />
     <ClCompile Include="src\primitives\CommunicationConfig.cpp" />
+    <ClCompile Include="src\primitives\KProbeResistantMatrix.cpp" />
     <ClCompile Include="src\primitives\UnlockP1InputCircuitCreator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\common\CommonMaliciousYao.hpp" />
     <ClInclude Include="include\common\Preconditions.hpp" />
+    <ClInclude Include="include\OfflineOnline\specs\OfflineProtocolP1.hpp" />
     <ClInclude Include="include\primitives\CheatingRecoveryCircuitCreator.hpp" />
     <ClInclude Include="include\primitives\CircuitInput.hpp" />
     <ClInclude Include="include\primitives\CommunicationConfig.hpp" />
     <ClInclude Include="include\primitives\CryptoPrimitives.hpp" />
+    <ClInclude Include="include\primitives\ExecutionParameters.hpp" />
+    <ClInclude Include="include\primitives\KProbeResistantMatrix.hpp" />
     <ClInclude Include="include\primitives\UnlockP1InputCircuitCreator.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
