--- a/TestMaliciousYao/TestMaliciousYao.vcxproj
+++ b/TestMaliciousYao/TestMaliciousYao.vcxproj
@@ -74,7 +74,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\local\boost_1_60_0;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\stav\libscapi\include;C:\local\boost_1_60_0;C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao\MaliciousYao;C:\Program Files\OpenSSL-Win64\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\local\boost_1_60_0\lib64-msvc-14.0;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -101,14 +101,16 @@
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level1</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x06030000;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao;C:\Users\stav\;C:\Program Files\OpenSSL-Win64;C:\local\boost_1_60_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>C:\Users\stav\libscapi\windows-solutions\scapi-sln\x64\Debug\ScapiCpp.lib;C:\Users\stav\libscapi\lib\MiraclWin64\x64\Debug\big.obj;C:\Users\stav\libscapi\lib\MiraclWin64\x64\Debug\MiraclWin64.lib;C:\Users\stav\libscapi\lib\OTExtension\Win64-sln\x64\Debug\OTExtension.lib;C:\Program Files\OpenSSL-Win64\lib\libeay32.lib;C:\Program Files\OpenSSL-Win64\lib\ssleay32.lib;C:\users\stav\documents\visual studio 2015\Projects\MaliciousYao\x64\Debug\MaliciousYao.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
