--- a/TestMaliciousYao/TestMaliciousYao.vcxproj
+++ b/TestMaliciousYao/TestMaliciousYao.vcxproj
@@ -74,7 +74,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\stav\libscapi\include;C:\local\boost_1_60_0;C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao\MaliciousYao;C:\Program Files\OpenSSL-Win64\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\stav\cereal\cereal\include;C:\Users\stav\libscapi\include;C:\local\boost_1_60_0;C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao\MaliciousYao;C:\Program Files\OpenSSL-Win64\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\local\boost_1_60_0\lib64-msvc-14.0;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -104,7 +104,7 @@
       <WarningLevel>Level1</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_WIN32_WINNT=0x06030000;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao;C:\Users\stav\;C:\Program Files\OpenSSL-Win64;C:\local\boost_1_60_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\stav\cereal\cereal\include;C:\Users\stav\Documents\Visual Studio 2015\Projects\MaliciousYao;C:\Users\stav\;C:\Program Files\OpenSSL-Win64;C:\local\boost_1_60_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
