--- a/MaliciousYao/MaliciousYao.vcxproj
+++ b/MaliciousYao/MaliciousYao.vcxproj
@@ -160,11 +160,13 @@
     <ClCompile Include="src\CommitmentWithZkProofOfDifference\SC.cpp" />
     <ClCompile Include="src\CommitmentWithZkProofOfDifference\SCom.cpp" />
     <ClCompile Include="src\common\CommonMaliciousYao.cpp" />
+    <ClCompile Include="src\common\KeyUtils.cpp" />
     <ClCompile Include="src\OfflineOnline\primitives\BucketBundleList.cpp" />
     <ClCompile Include="src\OfflineOnline\primitives\BucketMapping.cpp" />
     <ClCompile Include="src\OfflineOnline\primitives\Bundle.cpp" />
     <ClCompile Include="src\OfflineOnline\primitives\CommitmentsPackage.cpp" />
     <ClCompile Include="src\OfflineOnline\specs\OfflineProtocolP1.cpp" />
+    <ClCompile Include="src\OfflineOnline\subroutines\OfflineOtSenderRoutine.cpp" />
     <ClCompile Include="src\primitives\CheatingRecoveryCircuitCreator.cpp" />
     <ClCompile Include="src\primitives\CircuitInput.cpp" />
     <ClCompile Include="src\primitives\CommitmentBundle.cpp" />
@@ -179,6 +181,7 @@
     <ClInclude Include="include\common\aligned_allocator.hpp" />
     <ClInclude Include="include\common\aligned_allocator_no_destructor.hpp" />
     <ClInclude Include="include\common\CommonMaliciousYao.hpp" />
+    <ClInclude Include="include\common\KeyUtils.hpp" />
     <ClInclude Include="include\common\Preconditions.hpp" />
     <ClInclude Include="include\OfflineOnline\primitives\BucketBundle.hpp" />
     <ClInclude Include="include\OfflineOnline\primitives\BucketBundleList.hpp" />
@@ -186,6 +189,7 @@
     <ClInclude Include="include\OfflineOnline\primitives\Bundle.hpp" />
     <ClInclude Include="include\OfflineOnline\primitives\CommitmentsPackage.hpp" />
     <ClInclude Include="include\OfflineOnline\specs\OfflineProtocolP1.hpp" />
+    <ClInclude Include="include\OfflineOnline\subroutines\OfflineOtSenderRoutine.hpp" />
     <ClInclude Include="include\primitives\CheatingRecoveryCircuitCreator.hpp" />
     <ClInclude Include="include\primitives\CircuitInput.hpp" />
     <ClInclude Include="include\primitives\CommitmentBundle.hpp" />
